@startuml Car

class Car {
  - _id: String
  - _model: String
  - _brand: String

  + Car(id: String, model: String, brand: String)
  + getId(): String
  + getModel(): String
  + getBrand(): String
}

class CarDb {
  - _carsDb: List<Car>

  + CarDb()
  + getFromDb(carId: String): Car
}

class CarFormatter {
  + formatCarNames(cars: List<Car>): String
}

class CarAnalyzer {
  + getBestCar(cars: List<Car>): Car
}


CarAnalyzer --> Car : Uses
CarDb --> Car : Uses
CarFormatter --> Car : Uses
@enduml
